# aws-tools

./: .aliases  .aliases-macos  .cfnlintrc  .codecov.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  ADOT.md  AIML.md  AutoScaling.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CodeWhisperer.md  ECS-vs-EKS.md  FirewallManager.md  GenerativeAI.md  Glue.md  Graviton.md  LICENSE  LoadTesting.md  MANIFEST.in  MLTA.md  Makefile  README.md  ReleaseNotes.md  Security.md  Serverless.md  aliases  constraints.txt  nano.save  requirements-build.txt  requirements-ci.txt  requirements-cli.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini  (+1 more)
.github/: dependabot.yml  pull_request_template.md
ACM/: list_certificates.py
ACM-PCA/: README.md
AI-ML/: README.md
AMI/: README.md  get_latest_amis.py  get_latest_ec2_amis.py  get_latest_ecs_eks_ami.py  get_latest_ecs_optimized_ami.sh  get_latest_eks_optimized_ami.sh
API/: check_aws_apis.py
APIGateway/: README.md  apig_deploy.py  apig_v2_deploy.py  apigw_websocket.sh  deploy_apig.py  deploy_apig_v2.py  deploy_apigw.py  deploy_apigw_swagger_deployment.sh  deploy_apigw_v2.py  lambda_permissions_for_apig.py  list_api_gateways.py  list_domains.py  test_apig_curl.sh  test_apigw_curl.sh  update_rest_api_stage_settings.sh
AWS-Public/: aws-public-account-ids.py  aws-public-ip-address-ranges.py
AWS-Tools/: Install-AWS-Tools.ps1  README.md  install-powershell-on-ubuntu.sh
AWSCLI/: Install-awscli-v2.ps1  README.md  install-awscli-v2.sh  install_awscli_v2.sh  requirements.txt  uninstall_awscli_v2.sh
Amplify/: README.md  install_amplify_cli.sh
AppMesh/: README.md
AppSync/: README.md
Athena/: README.md  athena_query_execution.py  write_json_to_s3_import_to_athena.py
AutoScaling/: README.md
Bedrock/: README.md  invoke_agent.py  list_all_bedrock_foundation_models_available.py  list_bedrock_fundational_models.py  requirements.txt
Bottlerocket/: README.md
CDK/: README.md  init-cdk-patterns.sh  init_cdk_patterns.sh  install-cdk-assume-role-credential-plugin.sh  install-cdk-import.sh  install-cdk-patterns.sh  install-cdk-v1.sh  install-cdk-v2.sh  install-cdk8s-cli.sh  install_cdk.sh  install_cdk_assume_role_credential_plugin.sh  install_cdk_patterns.sh
Chatbot/: README.md
CloudFormation/: CloudFormer.md  README.md  cfn_to_dot_to_image.py  cloudformation_to_dot_to_image.py  create_stack_set_self_managed.sh  create_stack_set_service_managed.sh  install-cfn-guard.sh  list_stacks.py  recreate_stack_with_same_parameters.py  stack_sets_self_managed.py  update_stack_with_same_parameters.py
CloudFront/: README.md  install-cloudfront-hosting-toolkit.sh
CloudFront-S3/: CloudFront-S3-WebDistribution-OAI-SameS3MultiBehaviors.template.yaml  CloudFront-S3-WebDistribution-OAI.template.yaml  CloudFront-S3-WebDistribution-UseCustomOrigin.template  CloudFront-S3-WebDistribution-UseCustomOrigin.template.yaml  CloudFront-S3-WebDistribution-UseS3Origin.template  CloudFront-S3-WebDistribution-UseS3Origin.template.yaml  IAM-Group-ForDeployment.template.json  README.md  get_canonical_user_id.sh
CloudMap/: README.md  namespace.py
CloudShell/: IAM_Policy_CloudShell_DenyCredentialForwarding.json  IAM_Policy_CloudShell_DenyFileDownload.json  README.md  check_compute_environment.sh  init_setup.sh
CloudTrail/: CloudTrail-Insights.md  CloudTrailQueries.md  cloudtrail_lookup_event.sh  cloudtrail_lookup_events.py  cloudtrail_lookup_security.sh  list_cloudtrail_security_event_names.py
CloudWatch/: CloudWatch-ContainerInsights.md  README.md  (+13 more)
_common/: .flake8  Makefile  README.md  ReleaseNotes.md  pyproject.toml  requirements-build.txt  requirements-test.txt  setup.py  tox.ini
_common/arki_common/: __init__.py  aws.py  configs.py  docker.py  env_variable_store.py  utils.py
_common/arki_common/tests/: conftest.py
_common/helper/: __init__.py  aws.py  date_time.py  datetime.py  docker.py  file_io.py  logger.py  selector.py  ser.py  wrappers.py
_common/helper/tests/: conftest.py  test_aws.py  test_datetime.py  test_docker.py  test_file_io.py  test_http.py  test_init.py  test_logger.py  test_selector.py  test_ser.py  test_wrappers.py
_common/tests/: conftest.py  test_aws.py  test_datetime.py  test_docker.py  test_file_io.py  test_http.py  test_init.py  test_logger.py  test_selector.py  test_ser.py
(+1053 files in other folders)
